--- a/package.json
+++ b/package.json
@@ -2,12 +2,9 @@
   "scripts": {
     "dev": "vuepress dev docs",
     "build": "vuepress build docs",
-    "serve": "serve -n docs/.vuepress/dist",
-    "blc": "blc http://127.0.0.1:5000 -e -ro -f --filter-level 2",
-    "blc-external": "blc http://127.0.0.1:5000 -ro --filter-level 2"
+    "serve": "serve -n docs/.vuepress/dist"
   },
   "devDependencies": {
-    "broken-link-checker": "^0.7.8",
     "serve": "^10.0.2",
     "vuepress": "^0.14.4"
   },
