avoiding to install ruby

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,6 @@
   command = "./build.sh"
   publish = "docs/.vuepress/dist"
   functions = "lambda/dist"
+[build.environment]
+  RUBY_VERSION = ""
+
